--- a/_config.solitude.yml
+++ b/_config.solitude.yml
@@ -51,7 +51,7 @@ nav:
 hometop:
   enable: true
   banner:
-    title: 分享科技<br >与生活
+    title: 生活的理想，<br >就是为了理想的生活.
     url: www.zen-harmony.top
     icon:
       Nodejs:
