--- a/source/_data/about.yaml
+++ b/source/_data/about.yaml
@@ -12,7 +12,7 @@ authorinfo:
 title: 关于本站
 
 contentinfo: # 顶部个人信息展示
-  sup: 您好，很高兴认识你👋
+  sup: 您好，很高兴认识您👋
   name: 我叫Aninana # 名称
   title: 是一名独立开发者、灵墨社区管理员、志海融新成员、博主 # 介绍
   tip: 追求
