--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site
-title: Linux教程站
+title: 'Linux教程站'
 subtitle: 
 description: 
 keywords: '志海融新,Hexo，教程，Linux觅知园'
-author: Aninana
-language: zh-CN
+author: '小志'
+language: 'zh-CN'
 timezone: 'Asia/Shanghai'
 
 # URL
