--- a/source/_data/about.yaml
+++ b/source/_data/about.yaml
@@ -65,8 +65,8 @@ personalities:
 
 motto:
   title: 座右铭
-  prefix: 奋斗是人生的船只
-  content: 努力是梦想的风帆
+  prefix: 生活的理想，
+  content: 就是为了理想的生活.
 expertise:
   title: 特长
   prefix: Linux、社区管理
