--- a/source/_data/about.yaml
+++ b/source/_data/about.yaml
@@ -49,7 +49,7 @@ careers:
     - school: 客服
       major: 学习
       color: "#357ef5"
-  image: /img/about/65eb2d10ba24d-1.avif
+  image: /img/about/65eb2d10ba24d-1.webp
 
 personalities:
   tips: 性格
