--- a/source/_data/links.yaml
+++ b/source/_data/links.yaml
@@ -7,7 +7,7 @@ links:
       link_list:
        - name: 青稚
          link: https://blog.linux-qitong.top
-         avatar: https://blog.linux-qitong.top/img/avatar.webp
+         avatar: https://blog.linux-qitong.top/img/avatar.avif
          descr: 越努力，越幸运. 
        - name: Aninana
          link: https://aninana.zen-harmony.top
