--- a/source/_data/links.yaml
+++ b/source/_data/links.yaml
@@ -14,7 +14,7 @@ links:
          avatar: https://avatars.githubusercontent.com/u/130546027?v=4
          descr: 阿尼樱奈奈~
        - name: hanzn
-         link: https://hanzn-blog.pages.dev
+         link: https://hanzn.zen-harmony.top
          avatar: /img/link/hanzn.webp
          descr: hanzn-zzx~
        - name: Hyd_Offcial
