--- a/source/_data/links.yaml
+++ b/source/_data/links.yaml
@@ -17,10 +17,10 @@ links:
          link: https://hanzn.zen-harmony.top
          avatar: /img/link/hanzn.webp
          descr: hanzn-zzx~
-       - name: Hyd_Offcial
+       - name: silvaire_qwq
          link: https://lunars.site
-         avatar: https://gcore.jsdelivr.net/gh/lunarblog/CDN@Avatar-241002/avatar/241002.JPG
-         descr: Ciallo~ (∠・ω< )⌒☆
+         avatar: https://imgbed.lunars.site/file/1734695833083_Image_135898539474484.jpg
+         descr: Stay hungry, stay foolish.
        - name: Ariasaka
          link: https://blog.yaria.top
          avatar: https://bu.dusays.com/2024/10/28/671f8bf00317e.jpg
@@ -35,7 +35,7 @@ links:
          descr: 人文,科技,白日梦~ 
        - name: elaina
          link: https://ashenwitch.top
-         avatar: /img/link/elaina.webp
+         avatar: https://ashenwitch.top/img/pwa/favicon.png
          descr: ashenwitch~
        - name: Walter_Fang
          link: https://blog.walterfang.us.kg
