--- a/source/_data/links.yaml
+++ b/source/_data/links.yaml
@@ -30,7 +30,7 @@ links:
          avatar: /img/link/hyls.webp
          descr: 花雨落逝~
        - name: Redish101
-         link: https://blog.redish101.top/
+         link: https://blog.redish101.top
          avatar: /img/link/redish101.webp
          descr: 人文,科技,白日梦~ 
        - name: elaina
@@ -42,6 +42,6 @@ links:
          avatar: /img/link/fang.webp
          descr: Software Developer~
        - name: 璜珀
-         link: https://blog.hpcesia.com/
+         link: https://blog.hpcesia.com
          avatar: https://blog.hpcesia.com/img/myavatar.webp
          descr: 一个想要摆烂却又不甘于躺平的人.
