--- a/source/_data/about.yaml
+++ b/source/_data/about.yaml
@@ -57,7 +57,7 @@ personalities:
   color: "#33a474"
   type: INFP-T
   image: /img/about/INFP-T.webp
-  link: https://www.16personalities.com/
+  link: https://www.16personalities.com
   linkText: 16personalities
   typeLink: https://www.16personalities.com/ch/infp-%E4%BA%BA%E6%A0%BC
   typeName: 调停者
