--- a/.github/workflows/github-page.yml
+++ b/.github/workflows/github-page.yml
@@ -1,10 +1,8 @@
 name: Pages
-
 on:
   workflow_dispatch:
     branches:
       - main # default branch
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -20,15 +18,15 @@ jobs:
           # Examples: 20, 18.19, >=16.20.2, lts/Iron, lts/Hydrogen, *, latest, current, node
           # Ref: https://github.com/actions/setup-node#supported-version-syntax
           node-version: "20"
-      - name: Cache NPM dependencies
-        uses: actions/cache@v4
+      - uses: pnpm/action-setup@v4
+        name: Install pnpm
         with:
-          path: node_modules
-          key: ${{ runner.OS }}-npm-cache
-          restore-keys: |
-            ${{ runner.OS }}-npm-cache
+          version: 9
+          run_install: false
       - name: Install Dependencies
-        run: npm install
+        run: |
+          pnpm add -g hexo-cli
+          pnpm install
       - name: Build
         run: npm run build
       - name: Upload Pages artifact
