--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -1,8 +1,16 @@
 name: github-pages
 on:
+  push:
   workflow_dispatch:
     branches:
       - main # default branch
+  permissions:
+    contents: read
+    pages: write
+    id-token: write
+  concurrency:
+    group: pages
+    cancel-in-progress: false
 jobs:
   build:
     runs-on: ubuntu-latest
