--- a/_config.solitude.yml
+++ b/_config.solitude.yml
@@ -84,7 +84,7 @@ hometop:
     enable: true
     sup: 志海融新
     title: 欢迎您们
-    url: https:/www.zen-harmony.top
+    url: https://www.zen-harmony.top
     img: https://bing.img.run/rand.php
     color: "none"
 
