--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -31,6 +31,7 @@ jobs:
         run: |
           pnpm add -g hexo-cli
           pnpm install
+          gulp default
       - name: Build
         run: npm run build
       - name: Upload Pages artifact
