--- a/_config.solitude.yml
+++ b/_config.solitude.yml
@@ -570,7 +570,7 @@ typeit: true
 # --------------------------- start ---------------------------
 # OpenGraph
 OpenGraph:
-  enable: true
+  enable: false
   options:
     # twitter_card:
     # twitter_image:
