--- a/_config.solitude.yml
+++ b/_config.solitude.yml
@@ -572,7 +572,7 @@ typeit: true
 # --------------------------- start ---------------------------
 # OpenGraph
 OpenGraph:
-  enable: false
+  enable: true
   options:
     # twitter_card:
     # twitter_image:
