--- a/_config.solitude.yml
+++ b/_config.solitude.yml
@@ -15,8 +15,8 @@ nav:
   # 左侧盒子
   group:
      网页: 
-       官网: https://Linux-qitong.top || https://www.zen-harmony.top/img/house-solid.webp
-       觅知园: https://blog.Linux-qitong.top || https://doc.zen-harmony.top/img/inbox-solid.webp
+       官网: https://www.zen-harmony.top || https://www.zen-harmony.top/img/house-solid.webp
+       觅知园: https://doc.zen-harmony.top || https://doc.zen-harmony.top/img/inbox-solid.webp
      团队:
        志海融新: https://github.com/Zen-Harmony || https://doc.zen-harmony.top/img/site-logo.webp
   # Menu
