--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "build": "hexo generate",
     "clean": "hexo clean",
     "deploy": "hexo deploy",
-    "server": "hexo server",
-    "u": "hexo clean && hexo g && gulp"
+    "server": "hexo server"
   },
   "hexo": {
     "version": "7.3.0"
