--- a/source/_data/about.yaml
+++ b/source/_data/about.yaml
@@ -95,7 +95,7 @@ cause:
 
 award:
   enable: true
-  description: 感谢赞赏的人，因为您们，让我感受到写博客这件事情能够给您们创造了价值.这会让我在这条路上走得更远.
+  description: 感谢赞赏的人，因为您们，让我感受到写博客这件事情能够给您们创造价值.这会让我在这条路上走得更远.
   tips: 总金额：¥ {sum}，将全部用于开源项目的建设与维护. # 必须带 {sum}，否则无法显示总金额
 rewardList: # 底部捐赠
   - name: 晚秋
