--- a/_config.solitude.yml
+++ b/_config.solitude.yml
@@ -18,7 +18,7 @@ nav:
        官网: https://www.zen-harmony.top || https://www.zen-harmony.top/img/house-solid.webp
        觅知园: https://doc.zen-harmony.top || https://doc.zen-harmony.top/img/inbox-solid.webp
      团队:
-       志海融新: https://github.com/Zen-Harmony || https://doc.zen-harmony.top/img/site-logo.webp
+       志海融新: https://github.com/Zen-Harmony || /img/site-logo.webp
   # Menu
   # 菜单
   menu:
