--- a/_config.solitude.yml
+++ b/_config.solitude.yml
@@ -215,7 +215,7 @@ aside:
 # Home page article configuration information
 # 首页文章配置信息
 index_post_list:
-  direction: row # row / column
+  direction: column # row / column
   column: 2 # 2: 2 columns 3: 3 columns
   cover: both
 # --------------------------- end ---------------------------
