--- a/_config.solitude.yml
+++ b/_config.solitude.yml
@@ -407,6 +407,8 @@ footer:
   links:
     - name: 主题
       url: https://github.com/everfu/hexo-theme-solitude
+    - name: 萌ICP备20250668号
+      url: https://icp.gov.moe/?keyword=20250668
     # - name: RSS
     #   url: /atom.xml
 # --------------------------- end ---------------------------
